fix playback control layout styling on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1025,6 +1025,15 @@ button#addToLayoutsBtn:active {
 
 @media only screen and (max-width: 600px) {
 
+   #timeline-container {
+      flex-direction: column;
+   }
+
+   #playback-controls button {
+      width: 50%;
+      height:40px;
+   }
+
    #editor-header {
       flex-direction: column;
       justify-content: left;
